// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsLayout renders basic header styles properly 1`] = `
@media (min-width: 64em) {

}

@media (max-width: 768px) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.14"
  >
    .hikJyb{color:#C000FE!important;}
    .gOhrlb{background-color:#4a402b;}
    .gOhrlb .usa-logo .usa-logo__text{font-family:"Public Sans Web"!important;}
    .gOhrlb .usa-nav__primary,.gOhrlb .usa-nav__secondary-links{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .gOhrlb a.usa-nav__link{color:#594973;}
    .gOhrlb .usa-nav__secondary-item&gt;a{color:#c8155d;}
    .gOhrlb button.usa-menu-btn{background-color:#cfcd03;}
    .gOhrlb button.usa-menu-btn:hover{background-color:#9d9b02;}
    .kLGScC .usa-banner__header,.kLGScC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .kLGScC .usa-banner__button::after,.kLGScC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a{color:#aea9f7;font-family:"Public Sans Web";}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a::after{background-color:#aea9f7!important;}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .gGPZeK .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current{color:#1f1748!important;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current::after{background-color:#1f1748!important;}
    .hNPyWa{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .hNPyWa .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .hNPyWa .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .hNPyWa .result-desc&gt;p{color:#2bd4c7;}
    .hNPyWa .result-desc .result-url-text{color:#475830;}
    .hNPyWa .result-desc .result-url-text{color:#475830;}
    .hNPyWa .filter-tags-wrapper .filter-tag{color:#33f0aa;}
    .hOKrHp{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .hOKrHp .usa-footer__return-to-top&gt;a,.hOKrHp a.usa-footer__primary-link{color:#46f966;}
    .hOKrHp .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .hPDCJs{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .hPDCJs .usa-identifier__container,.hPDCJs .usa-identifier__container&gt;a,.hPDCJs .usa-identifier__identity-disclaimer,.hPDCJs .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .hPDCJs .usa-identifier__required-link,.hPDCJs .usa-identifier__identity-domain{color:#5d5a6f;}
    .hPDCJs .usa-identifier__required-link:hover,.hPDCJs .usa-identifier__required-link:active,.hPDCJs .usa-identifier__required-link:visited{color:#5d5a6f;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
    .usa-search .usa-button{background-color:#cfcd03;}
    .usa-search .usa-button:hover{background-color:#9d9b02;}
    @media (max-width: 768px){.serp-facets-container{display:block;}.serp-main-container{width:100%;}}
    .facets-close-icon-wrapper{background-color:#cfcd03;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders extended header styles properly 1`] = `
@media (max-width: 63.99em) {

}

@media (min-width: 64em) {

}

@media (max-width: 768px) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.14"
  >
    .hikJyb{color:#C000FE!important;}
    .gzbry{background-color:#4a402b;}
    .gzbry .usa-logo .usa-logo__text{font-family:"Public Sans Web"!important;}
    .gzbry .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .gzbry .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .gzbry .usa-nav{background-color:#83df0a;}
    .gzbry a.usa-nav__link{color:#594973!important;}
    .gzbry a.usa-nav__link:hover::after{background-color:#594973!important;}
    .gzbry .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.gzbry .usa-nav__secondary-item&gt;a{color:#594973;}}
    .gzbry button.usa-menu-btn{background-color:#cfcd03;}
    .gzbry button.usa-menu-btn:hover{background-color:#9d9b02;}
    .kLGScC .usa-banner__header,.kLGScC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .kLGScC .usa-banner__button::after,.kLGScC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a{color:#aea9f7;font-family:"Public Sans Web";}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a::after{background-color:#aea9f7!important;}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .gGPZeK .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current{color:#1f1748!important;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current::after{background-color:#1f1748!important;}
    .hNPyWa{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .hNPyWa .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .hNPyWa .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .hNPyWa .result-desc&gt;p{color:#2bd4c7;}
    .hNPyWa .result-desc .result-url-text{color:#475830;}
    .hNPyWa .result-desc .result-url-text{color:#475830;}
    .hNPyWa .filter-tags-wrapper .filter-tag{color:#33f0aa;}
    .hOKrHp{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .hOKrHp .usa-footer__return-to-top&gt;a,.hOKrHp a.usa-footer__primary-link{color:#46f966;}
    .hOKrHp .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .hPDCJs{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .hPDCJs .usa-identifier__container,.hPDCJs .usa-identifier__container&gt;a,.hPDCJs .usa-identifier__identity-disclaimer,.hPDCJs .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .hPDCJs .usa-identifier__required-link,.hPDCJs .usa-identifier__identity-domain{color:#5d5a6f;}
    .hPDCJs .usa-identifier__required-link:hover,.hPDCJs .usa-identifier__required-link:active,.hPDCJs .usa-identifier__required-link:visited{color:#5d5a6f;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
    .usa-search .usa-button{background-color:#cfcd03;}
    .usa-search .usa-button:hover{background-color:#9d9b02;}
    @media (max-width: 768px){.serp-facets-container{display:block;}.serp-main-container{width:100%;}}
    .facets-close-icon-wrapper{background-color:#cfcd03;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders search with results styles properly 1`] = `
@media (max-width: 63.99em) {

}

@media (min-width: 64em) {

}

@media (max-width: 768px) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.14"
  >
    .hikJyb{color:#C000FE!important;}
    .gzbry{background-color:#4a402b;}
    .gzbry .usa-logo .usa-logo__text{font-family:"Public Sans Web"!important;}
    .gzbry .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .gzbry .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .gzbry .usa-nav{background-color:#83df0a;}
    .gzbry a.usa-nav__link{color:#594973!important;}
    .gzbry a.usa-nav__link:hover::after{background-color:#594973!important;}
    .gzbry .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.gzbry .usa-nav__secondary-item&gt;a{color:#594973;}}
    .gzbry button.usa-menu-btn{background-color:#cfcd03;}
    .gzbry button.usa-menu-btn:hover{background-color:#9d9b02;}
    .kLGScC .usa-banner__header,.kLGScC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .kLGScC .usa-banner__button::after,.kLGScC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a{color:#aea9f7;font-family:"Public Sans Web";}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a::after{background-color:#aea9f7!important;}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .gGPZeK .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .gGPZeK .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current{color:#1f1748!important;}
    .gGPZeK li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current::after{background-color:#1f1748!important;}
    .hNPyWa{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .hNPyWa .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .hNPyWa .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .hNPyWa .result-desc&gt;p{color:#2bd4c7;}
    .hNPyWa .result-desc .result-url-text{color:#475830;}
    .hNPyWa .result-desc .result-url-text{color:#475830;}
    .hNPyWa .filter-tags-wrapper .filter-tag{color:#33f0aa;}
    .hOKrHp{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .hOKrHp .usa-footer__return-to-top&gt;a,.hOKrHp a.usa-footer__primary-link{color:#46f966;}
    .hOKrHp .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .hPDCJs{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .hPDCJs .usa-identifier__container,.hPDCJs .usa-identifier__container&gt;a,.hPDCJs .usa-identifier__identity-disclaimer,.hPDCJs .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .hPDCJs .usa-identifier__required-link,.hPDCJs .usa-identifier__identity-domain{color:#5d5a6f;}
    .hPDCJs .usa-identifier__required-link:hover,.hPDCJs .usa-identifier__required-link:active,.hPDCJs .usa-identifier__required-link:visited{color:#5d5a6f;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
    .usa-search .usa-button{background-color:#cfcd03;}
    .usa-search .usa-button:hover{background-color:#9d9b02;}
    @media (max-width: 768px){.serp-facets-container{display:block;}.serp-main-container{width:100%;}}
    .facets-close-icon-wrapper{background-color:#cfcd03;}
  </style>
</head>
`;
